--- a/eReconcilition.WebApi/appsettings.json
+++ b/eReconcilition.WebApi/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "TokenOptions": {
+    "Audience": "www.mertmyt.com",
+    "Issuer": "www.mertmyt.com",
+    "AccessTokenExpiartion": "90",
+    "SecurityKey": "mysecretkeymysecretkey2022"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
